--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           Hey,I am Raviraj Kushwaha a tech enthusiasts.Currently I am Pursuing my B.Tech with Computer Science Engineering
           from Rewa Engineering College ,Rewa, India. A Android geek, Linux ethusiast, I am highly passionate about the web technology and programming.
         </p>
-        <a href="#" class="btn">Download CV</a>
+        <a href="https://drive.google.com/file/d/1C3C_hsu-cCOAX84WdB-lurrPAMjyz2ZH/view?usp=sharing" class="btn">View Resume</a>
       </div>
     </div>
   </section>
