--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       <div class="right" data-aos="fade-left" data-aos-duration="2000">
         <h1>I'm Raviraj Kushwaha and a <span id="type2"></span></h1>
         <p>
-          Hey,I am Raviraj Kushwaha a tech enthusiasts.Currently I am Pursuing my B.Tech with Computer Science Engineering
-          from Rewa Engineering College ,Rewa, India. A Android geek, Linux ethusiast, I am highly passionate about the web technology and programming.
+          Hey, I am Raviraj Kushwaha a tech enthusiasts. Currently I am Pursuing my B.Tech with Computer Science Engineering
+          from Rewa Engineering College, Rewa, India. An Android geek, Linux ethusiast, I am highly passionate about the web technology and programming.
         </p>
         <a href="https://drive.google.com/file/d/1C3C_hsu-cCOAX84WdB-lurrPAMjyz2ZH/view?usp=sharing" target="_blank" class="btn">View Resume</a>
       </div>
