--- a/index.html
+++ b/index.html
@@ -69,16 +69,12 @@
       <h3>Hello, my name is</h3>
       <h1>Raviraj Kushwaha</h1>
       <h4>And I'm a <span id="type1" class="typeit"></span></h4>
-      <a href="mailto:kushwaharaviraj8@gmail.com" target="_black">Hire me</a>
+      <a href="https://www.linkedin.com/in/ravi0900/" target="_black">See More</a>
     </div>
 
     <img class="banner" src="./images/hero.png" alt="" />
 
-    <div class="icons">
-      <span><i class="fab fa-facebook-f"></i></span>
-      <span><i class="fab fa-instagram"></i></span>
-      <span><i class="fab fa-twitter"></i></span>
-    </div>
+    
 
     <!-- color control -->
     <div class="control">
@@ -102,7 +98,7 @@
 
     <div class="about-center container">
       <div class="left" data-aos="fade-right" data-aos-duration="2000">
-        <img src="./images/profile1.jpg" alt="" />
+        <img src="./notimages/profile1.jpg" alt="" />
       </div>
       <div class="right" data-aos="fade-left" data-aos-duration="2000">
         <h1>I'm Raviraj Kushwaha and a <span id="type2"></span></h1>
