--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <span><a class="fab fa-github"  href="https://github.com/ravi0900" target="_blank"></a></span>
       <span><a class="fab fa-instagram" href="https://www.instagram.com/ravi_0140" target="_blank"></a></span>
       <span><a class="fab fa-twitter" href="https://twitter.com/Ravi0541" target="_blank"></a></span>
-      <span><a class="fab fa-telegram" href="https://t.me/ravi0140" target="_blank"></a></span>
+<!--       <span><a class="fab fa-telegram" href="https://t.me/ravi0140" target="_blank"></a></span> -->
     </div>    
 
     <!-- color control -->
