--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="#about" class="nav-link scroll-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="#services" class="nav-link scroll-link">Services</a>
+              <a href="#services" class="nav-link scroll-link">Projects</a>
             </li>
             <li class="nav-item">
               <a href="#skills" class="nav-link scroll-link">Skills</a>
@@ -81,7 +81,7 @@
     </div>    
 
     <!-- color control -->
-    <div class="control">
+    <!-- <div class="control">
       <div class="widget">
         <i class="fas fa-cog"></i>
       </div>
@@ -92,7 +92,7 @@
         <span data-id="#03FFC7"></span>
       </div>
     </div>
-  </header>
+  </header> -->
 
   <!-- Main -->
   <section class="section about" id="about">
@@ -115,34 +115,34 @@
     </div>
   </section>
 
-  <!-- Services -->
+  <!-- Project -->
   <section class="section theme" id="services">
     <div class="title">
-      <h1>My Services</h1>
+      <h1>My Project</h1>
     </div>
 
     <div class="services-center container">
       <div class="service" data-aos="fade-down" data-aos-duration="2000">
         <span><i class="fab fa-accusoft"></i></span>
-        <h2>Web Design</h2>
+        <a href="https://github.com/ravi0900/kernel_xiaomi_lavender_predator" target="_blank" class="nav-link scroll-link"><h2>Kernel Development</h2></a>
         <p>
-        Front-End Web developer.
+          Compile the kernel from the source and succsefully flashed on my device.
         </p>
       </div>
 
-      <div class="service" data-aos="fade-up" data-aos-duration="2000">
+      <!-- <div class="service" data-aos="fade-up" data-aos-duration="2000">
         <span><i class="fas fa-chart-line"></i></span>
         <h2>Advertising</h2>
         <p>
         Social Media and Digital Marketing, SEO.
         </p>
-      </div>
+      </div> -->
 
       <div class="service" data-aos="fade-down" data-aos-duration="2000">
-        <span><i class="fas fa-blender-phone"></i></span>
-        <h2>Apps Design</h2>
+        <span><i class="fas fa-blender-phone" ></i></span>
+        <a href="https://github.com/ravi0900/AboutMe" target="_blank" class="nav-link scroll-link"><h2>Portfolio Website</h2></a>
         <p>
-        UI/UX Designer.
+          Build using simple JavaScript HTML/CSS file, Deployed on vercel.
         </p>
       </div>
     </div>
