--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- <div class="control">
       <div class="widget">
         <i class="fas fa-cog"></i>
-      </div>
+      </div> -->
       <div class="colors">
         <span data-id="#0044FF"></span>
         <span data-id="#FF4600"></span>
@@ -92,7 +92,7 @@
         <span data-id="#03FFC7"></span>
       </div>
     </div>
-  </header> -->
+  </header>
 
   <!-- Main -->
   <section class="section about" id="about">
