--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
 <!--       <span><a class="fab fa-telegram" href="https://t.me/ravi0140" target="_blank"></a></span> -->
     </div>    
 
-    <!-- color control -->
+    <!-- color control control widget -->
     <!-- <div class="control">
       <div class="widget">
         <i class="fas fa-cog"></i>
       </div> -->
+      
       <div class="colors">
         <span data-id="#0044FF"></span>
         <span data-id="#FF4600"></span>
