--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h3>Hello, my name is</h3>
       <h1>Raviraj Kushwaha</h1>
       <h4>And I'm a <span id="type1" class="typeit"></span></h4>
-      <a href="https://www.linkedin.com/in/ravi0900/" target="_black">See More</a>
+      <a href="https://github.com/ravi0900" target="_black">See More</a>
     </div>
 
     <img class="banner" src="./images/hero.png" alt="" />
@@ -81,10 +81,10 @@
     </div>    
 
     <!-- color control control widget -->
-    <!-- <div class="control">
+    <!-- <div class="control"> -->
       <div class="widget">
         <i class="fas fa-cog"></i>
-      </div> -->
+      </div>
       
       <div class="colors">
         <span data-id="#0044FF"></span>
