--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
       <div class="right" data-aos="fade-left" data-aos-duration="2000">
         <h1>I'm Raviraj Kushwaha and a <span id="type2"></span></h1>
         <p>
-          Hey, I am Raviraj Kushwaha a tech enthusiasts. Currently I am Pursuing my B.Tech with Computer Science Engineering
-          from Rewa Engineering College, Rewa, India. An Android geek, Linux ethusiast, I am highly passionate about the web technology and programming.
+          Hey, I am Raviraj Kushwaha a tech enthusiasts. I write code in python and I love using libraries build by other developer, I am highly passionate about the technologies and programming.
         </p>
         <a href="https://drive.google.com/file/d/1g1vtFKKt0TdpbGpBVe77v7nqk2k1ZCBU/view?usp=sharing" target="_blank" class="btn">View Resume</a>
       </div>
@@ -158,28 +157,28 @@
     <div class="skills-center container">
       <div class="skills-left" data-aos="fade-right" data-aos-duration="2000">
         <div class="skills-box">
-          <h4>HTML5</h4>
+          <h4>Python</h4>
           <div class="skills-ilt">
             <div class="skills-bar html"></div>
             <span>95%</span>
           </div>
         </div>
         <div class="skills-box">
-          <h4>CSS</h4>
+          <h4>SeleniumBase</h4>
           <div class="skills-ilt">
             <div class="skills-bar css"></div>
             <span>85%</span>
           </div>
         </div>
         <div class="skills-box">
-          <h4>JavaScript</h4>
+          <h4>API Automation</h4>
           <div class="skills-ilt">
             <div class="skills-bar javascript"></div>
             <span>90%</span>
           </div>
         </div>
         <div class="skills-box">
-          <h4>Nodejs</h4>
+          <h4>Couchbase</h4>
           <div class="skills-ilt">
             <div class="skills-bar nodejs"></div>
             <span>80%</span>
@@ -187,7 +186,7 @@
         </div>
 
         <div class="skills-box">
-          <h4>Mongodb</h4>
+          <h4></h4>
           <div class="skills-ilt">
             <div class="skills-bar mongodb"></div>
             <span>95%</span>
@@ -198,7 +197,7 @@
       <div class="right" data-aos="fade-left" data-aos-duration="2000">
         <h3>My creative skills and experience</h3>
         <p>
-        I like to code things from scratch, and enjoy bringing ideas to life in the browser. I learned HTML, CSS, JavaScript, Nodejs, Python, C++ and many more in ways. I completed my #100DaysOfCode and created many project</p>
+        I like to code with purppse to enjoy bringing ideas to daily life. I learned Python, Nodejs, C++ and keen to learn and updated with all cutting technologies./p>
         <a href="https://www.linkedin.com/in/ravi0900/" target="_blank" class="btn">More About me</a>
       </div>
     </div>
@@ -247,7 +246,7 @@
   </section>
 
   <footer>
-    <p>Created By <span>Raviraj</span> | &copy; 2021 All rights reserved.</p>
+    <p>Created By <span>Raviraj</span> | &copy; 2025 All rights reserved.</p>
   </footer>
 
   <!-- AOS -->
