--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="right" data-aos="fade-left" data-aos-duration="2000">
         <h1>I'm Raviraj Kushwaha and a <span id="type2"></span></h1>
         <p>
-          Hey, I am Raviraj Kushwaha a tech enthusiasts. I write code in python and I love using libraries build by other developer, I am highly passionate about the technologies and programming.
+          Hey, I am Raviraj Kushwaha a tech enthusiasts. I write code in python and I love searching and trying useful libraries built by awesome developers, I am highly passionate about the technologies and programming.
         </p>
         <a href="https://drive.google.com/file/d/1g1vtFKKt0TdpbGpBVe77v7nqk2k1ZCBU/view?usp=sharing" target="_blank" class="btn">View Resume</a>
       </div>
