--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </div>
         </div>
         <div class="skills-box">
-          <h4>Couchbase</h4>
+          <h4>Couchbase SDK</h4>
           <div class="skills-ilt">
             <div class="skills-bar nodejs"></div>
             <span>80%</span>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="skills-box">
-          <h4></h4>
+          <h4>Requests</h4>
           <div class="skills-ilt">
             <div class="skills-bar mongodb"></div>
             <span>95%</span>
