--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="right" data-aos="fade-left" data-aos-duration="2000">
         <h3>My creative skills and experience</h3>
         <p>
-        I like to code with purppse to enjoy bringing ideas to daily life. I learned Python, Nodejs, C++ and keen to learn and updated with all cutting technologies./p>
+        I like to code with purppse to enjoy bringing ideas to daily life. I learned Python, Nodejs, C++ and keen to learn and updated with all cutting technologies.</p>
         <a href="https://www.linkedin.com/in/ravi0900/" target="_blank" class="btn">More About me</a>
       </div>
     </div>
