--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
       <div class="contact-info">
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
-          <p>kushwaharaviraj8@gmail.com</p>
+          <p><a href="mailto:kushwaharaviraj8@gmail.com">kushwaharaviraj8@gmail.com</a></p>
         </div>
         <div class="contact-item">
           <i class="fas fa-map-marker-alt"></i>
           <p>Rewa, India</p>
         </div>
         <div class="contact-item">
-          <i class="fas fa-linkedin"></i>
+          <i class="fab fa-linkedin-in"></i>
           <p><a href="https://www.linkedin.com/in/ravi0900/" target="_blank">LinkedIn Profile</a></p>
         </div>
       </div>
