panel color fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="description" content="Raviraj Kushwaha - Software Engineer in Test and Automation Specialist" />
-  <meta name="theme-color" content="#0044FF" />
+  <meta name="theme-color" content="#0052D4" />
   <link rel="shortcut icon" href="./images/ironman.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
