--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
     <div class="hero">
       <h3>Software Engineer in Test</h3>
-      <h1>Raviraj Kushwaha</h1>
+      <h1 data-text="Raviraj Kushwaha">Raviraj Kushwaha</h1>
       <h4>Mannual & Automation Testing Specialist</h4>
       <div class="cta-buttons">
         <a href="https://github.com/ravi0900" target="_blank" rel="noopener noreferrer" class="btn primary">
