--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <title>Raviraj Kushwaha</title>
 </head>
 <body>
+  <div class="body-overlay"></div>
   <!-- Header -->
   <header id="home" class="header">
     <nav class="nav">
@@ -22,12 +23,12 @@
         </div>
         <div class="nav-links">
           <ul class="nav-list" id="main-navigation">
-            <li class="nav-item"><a href="#home" class="nav-link scroll-link" data-section="home">Home</a></li>
-            <li class="nav-item"><a href="#about" class="nav-link scroll-link" data-section="about">About</a></li>
-            <li class="nav-item"><a href="#experience" class="nav-link scroll-link" data-section="experience">Experience</a></li>
-            <li class="nav-item"><a href="#projects" class="nav-link scroll-link" data-section="projects">Projects</a></li>
-            <li class="nav-item"><a href="#skills" class="nav-link scroll-link" data-section="skills">Skills</a></li>
-            <li class="nav-item"><a href="#contact" class="nav-link scroll-link" data-section="contact">Contact</a></li>
+            <li class="nav-item"><a href="#home" class="nav-link scroll-link" data-section="home"><i class="fas fa-home"></i> Home</a></li>
+            <li class="nav-item"><a href="#about" class="nav-link scroll-link" data-section="about"><i class="fas fa-user"></i> About</a></li>
+            <li class="nav-item"><a href="#experience" class="nav-link scroll-link" data-section="experience"><i class="fas fa-briefcase"></i> Experience</a></li>
+            <li class="nav-item"><a href="#projects" class="nav-link scroll-link" data-section="projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
+            <li class="nav-item"><a href="#skills" class="nav-link scroll-link" data-section="skills"><i class="fas fa-cogs"></i> Skills</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link scroll-link" data-section="contact"><i class="fas fa-envelope"></i> Contact</a></li>
           </ul>
         </div>
         <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="main-navigation">
