--- a/index.html
+++ b/index.html
@@ -235,16 +235,20 @@
     <div class="contact-center container">
       <div class="contact-info">
         <div class="contact-item">
-          <i class="fas fa-envelope"></i>
-          <p><a href="mailto:kushwaharaviraj8@gmail.com">kushwaharaviraj8@gmail.com</a></p>
+          <a href="mailto:kushwaharaviraj8@gmail.com">
+            <i class="fas fa-envelope"></i><br>
+            <p>kushwaharaviraj8@gmail.com</p>
+          </a>
         </div>
         <div class="contact-item">
           <i class="fas fa-map-marker-alt"></i>
           <p>Greater Noida, India</p>
         </div>
         <div class="contact-item">
-          <i class="fab fa-linkedin-in"></i>
-          <p><a href="https://www.linkedin.com/in/ravi0900/" target="_blank">LinkedIn Profile</a></p>
+          <a href="https://www.linkedin.com/in/ravi0900/" target="_blank">
+            <i class="fab fa-linkedin-in"></i><br>
+            <p>LinkedIn Profile</p>
+          </a>
         </div>
       </div>
     </div>
